--- a/FoodDiaryApi/FoodDiaryApi.csproj
+++ b/FoodDiaryApi/FoodDiaryApi.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+	<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="7.0.0" />
+
   </ItemGroup>
 
   <ItemGroup>
